--- a/index.html
+++ b/index.html
@@ -1,7 +1,35 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta name="description" content="interaction designer / visual designer / front-end developer">
+  <title>Rebecca Fish</title>
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<header></header>
+<section>
+  <h2>About.</h2>
+  <p>Hey, I’m Rebecca. I’m an interaction designer, visual designer, and sometimes, I do front-end development, too.
+I work at Apple.</p>
+  <p>My day job is largely confidential, so I can’t share much here.</p>
+  <p>I’ve archived some work from before Apple below.</p>
+</section>
+
+<section>
+  <h2>Older projects.</h2>
+  <p><a>Learning &amp; Development Start-up (2013)</a></p>
+  <p><a>Oneview (2012)</a></p>
+  <p><a>E*Trade iPad app &amp; Other Wireframes (2011)</a></p>
+  <p><a>The Pioneer (2010)</a></p>
+</section>
+
+<section>
+  <h2>Contact.</h2>
+
+</section>
+
+
 </body>
+
 </html>
