--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
   <meta name="description" content="interaction designer / visual designer / front-end developer">
+
+  <!-- stylesheets -->
+  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/skeleton.css">
+  <link rel="stylesheet" href="/css/main.css">
+
   <title>Rebecca Fish</title>
 </head>
 
@@ -13,7 +19,7 @@
   <p>Hey, I’m Rebecca. I’m an interaction designer, visual designer, and sometimes, I do front-end development, too.
 I work at Apple.</p>
   <p>My day job is largely confidential, so I can’t share much here.</p>
-  <p>I’ve archived some work from before Apple below.</p>
+  <p>I’ve archived some projects from previous companies below.</p>
 </section>
 
 <section>
