--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
 <body>
 <header></header>
-<section>
+<div class="container">
+<section class="row">
   <h2>About.</h2>
   <p>Hey, I’m Rebecca. I’m an interaction designer, visual designer, and sometimes, I do front-end development, too.
 I work at Apple.</p>
@@ -22,7 +23,7 @@ I work at Apple.</p>
   <p>I’ve archived some projects from previous companies below.</p>
 </section>
 
-<section>
+<section class="row">
   <h2>Older projects.</h2>
   <p><a>Learning &amp; Development Start-up (2013)</a></p>
   <p><a>Oneview (2012)</a></p>
@@ -30,11 +31,11 @@ I work at Apple.</p>
   <p><a>The Pioneer (2010)</a></p>
 </section>
 
-<section>
+<section class="row">
   <h2>Contact.</h2>
 
 </section>
-
+</div>
 
 </body>
 
