added outdated browser plugin

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="description" content="interaction designer / visual designer / front-end developer">
 
   <!-- stylesheets -->
+  <link rel="stylesheet" href="/css/outdatedBrowser.min.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="stylesheet" href="/css/skeleton.css">
   <link rel="stylesheet" href="/css/main.css">
@@ -13,7 +14,9 @@
 </head>
 
 <body>
+
 <header></header>
+
 <div class="container">
 <section class="row">
   <h2>About.</h2>
@@ -36,6 +39,42 @@ I work at Apple.</p>
 
 </section>
 </div>
+
+<!-- OUTDATED BROWSER -->
+<div id="outdated">
+     <h6>Your browser is out-of-date!</h6>
+     <p>Update your browser to view this website correctly. <a id="btnUpdateBrowser" href="http://outdatedbrowser.com/">Update my browser now </a></p>
+     <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>
+</div>
+
+<script src="/js/outdatedBrowser.min.js"></script>
+
+<script>
+    //event listener form DOM ready
+    function addLoadEvent(func) {
+        var oldonload = window.onload;
+        if (typeof window.onload != 'function') {
+            window.onload = func;
+        } else {
+            window.onload = function() {
+                if (oldonload) {
+                    oldonload();
+                }
+                func();
+            }
+        }
+    }
+    //call function after DOM ready
+    addLoadEvent(function(){
+        outdatedBrowser({
+            bgColor: '#f25648',
+            color: '#ffffff',
+            lowerThan: 'borderImage',
+            languagePath: ''
+        })
+    });
+</script>
+<!-- END OUTDATED BROWSER -->
 
 </body>
 
