--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 
 <body>
 
-<header></header>
+<header>
+  <picture>
+  	<source srcset="/img/banner@2x.png 2880w, /img/banner.png 1440w"
+    sizes="1440vw" media="(min-width: 1000px)">
+  	<source srcset="" media="(min-width: 500px)">
+    <img src="" alt="" />
+  </picture>
+</header>
 
 <div class="container">
 <section class="row">
