fixed links and header size

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta name="description" content="interaction designer / visual designer / front-end developer">
 
   <!-- stylesheets -->
-  <link rel="stylesheet" href="/css/outdatedBrowser.min.css">
-  <link rel="stylesheet" href="/css/normalize.css">
-  <link rel="stylesheet" href="/css/skeleton.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/outdatedBrowser.min.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <title>Rebecca Fish</title>
 </head>
@@ -17,8 +17,8 @@
 
 <header>
   <picture>
-  	<source srcset="/img/banner@2x.png 2880w, /img/banner.png 1440w"
-    sizes="1440vw" media="(min-width: 1000px)">
+  	<source srcset="img/banner@2x.png 2880w, img/banner.png 1440w"
+    sizes="100vw" media="(min-width: 1000px)">
   	<source srcset="" media="(min-width: 500px)">
     <img src="" alt="" />
   </picture>
@@ -54,7 +54,7 @@ I work at Apple.</p>
      <p class="last"><a href="#" id="btnCloseUpdateBrowser" title="Close">&times;</a></p>
 </div>
 
-<script src="/js/outdatedBrowser.min.js"></script>
+<script src="js/outdatedBrowser.min.js"></script>
 
 <script>
     //event listener form DOM ready
