orientation iPhone fix?

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <header>
   <picture>
-    <source srcset="img/banner-5K-large.png 5120w, img/banner-5K-med.png 2560w" sizes="100vw" media="(min-width: 1600px)">
+    <source srcset="img/banner-5K-large.png 5120w, img/banner-5K-med.png 2560w" sizes="100vw" media="(min-width: 1600px) and (orientation: landscape)">
   	<source srcset="img/banner-large.png 2880w, img/banner-med.png 1440w, img/banner-small.png 720w," sizes="100vw" media="(orientation: landscape)">
   	<source srcset="img/banner-portrait-large.png 1536w, img/banner-portrait-med.png 768w" sizes="100vw" media="(min-width: 700px) and (orientation: portrait)">
     <source srcset="img/banner-portrait-small.png 828w, img/banner-portrait-smaller.png 414w, img/banner-portrait-tiny.png 207w" sizes="100vw" media="(orientation: portrait)">
