--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <meta name="viewport" content="initial-scale = 1.0,maximum-scale = 1.0" />
   <meta name="description" content="interaction designer / visual designer / front-end developer">
 
   <!-- stylesheets -->
