start to implement typekit

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <script src="https://use.typekit.net/mjq3fkc.js"></script>
+  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
   <title>Rebecca Fish</title>
 </head>
 
@@ -28,7 +31,7 @@
 
 <div class="container">
 <section class="row">
-  <h2>About.</h2>
+  <h2 class="tk-nimbus-sans">About.</h2>
   <p>Hey, I’m Rebecca. I’m an interaction designer, visual designer, and sometimes, I do front-end development, too.
 I work at Apple.</p>
   <p>My day job is largely confidential, so I can’t share much here.</p>
