started responsive text

--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/outdatedBrowser.min.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/skeleton.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/responsive.css">
 
-  <script src="https://use.typekit.net/mjq3fkc.js"></script>
-  <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Roboto:500,700,900" rel="stylesheet">
 
   <title>Rebecca Fish</title>
 </head>
@@ -29,28 +28,33 @@
   </picture>
 </header>
 
-<div class="container">
+
 <section class="row">
-  <h2 class="tk-nimbus-sans">About.</h2>
-  <p>Hey, I’m Rebecca. I’m an interaction designer, visual designer, and sometimes, I do front-end development, too.
-I work at Apple.</p>
-  <p>My day job is largely confidential, so I can’t share much here.</p>
-  <p>I’ve archived some projects from previous companies below.</p>
+  <div class="col blurb">
+    <h2>Hi, I'm Rebecca.</h2>
+    <p>I'm a product designer based in San Francisco, CA. I interaction design, visual design, and sometimes, front-end development, too.
+  I work at Apple.</p>
+    <p>This used to be my portfolio site, but most of my work over the last few years has been confidential, so I can't share much here.</p>
+    <p>I've archived some projects from previous companies below.</p>
+  </div>
 </section>
 
 <section class="row">
+  <div class="col blurb">
   <h2>Older projects.</h2>
   <p><a>Learning &amp; Development Start-up (2013)</a></p>
   <p><a>Oneview (2012)</a></p>
   <p><a>E*Trade iPad app &amp; Other Wireframes (2011)</a></p>
   <p><a>The Pioneer (2010)</a></p>
+</div>
 </section>
 
 <section class="row">
+  <div class="col blurb">
   <h2>Contact.</h2>
-
+  </div>
 </section>
-</div>
+
 
 <!-- OUTDATED BROWSER -->
 <div id="outdated">
