--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
   <meta name="description" content="interaction designer / visual designer / front-end developer">
 
   <!-- stylesheets -->
+  <link rel="stylesheet" href="css/fonts.css">
+
   <link rel="stylesheet" href="css/outdatedBrowser.min.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/responsive.css">
-
-  <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900|Roboto:500,700,900" rel="stylesheet">
 
   <title>Rebecca Fish</title>
 </head>
@@ -34,8 +34,8 @@
     <h2>Hi, I'm Rebecca.</h2>
     <p>I'm a product designer based in San Francisco, CA. I interaction design, visual design, and sometimes, front-end development, too.
   I work at Apple.</p>
-    <p>This used to be my portfolio site, but most of my work over the last few years has been confidential, so I can't share much here.</p>
-    <p>I've archived some projects from previous companies below.</p>
+    <p>This used to be my portfolio site, but most of my work over the last few years has been confidential, so I can't share much here.
+I've archived some projects from pre-2013 below.</p>
   </div>
 </section>
 
